--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,17 @@
       <li><a href="login.html">Login page</a></li>
       <li><a href="restore.html">Restore page</a></li>
       <li><a href="ui.html">UI Kit</a></li>
-      <li>EXTRA</li>
+
+      <li style="list-style: none; margin:15px 0 10px;"><b>EXTRA</b></li>
       <li><a href="about.html">About</a></li>
       <li><a href="help.html">Help</a></li>
       <li><a href="messages.html">Messages</a></li>
       <li><a href="message-form.html">Leave us a message</a></li>
-      <li>ADMIN</li>
-      <!-- <li><a href="courses-admin.html">Courses</a></li> -->
+      
+      <li style="list-style: none; margin:15px 0 10px;"><b>ADMIN</b></li>
+      <!-- <li><a href="staff-admin.html">Staff</a></li> -->
+      <li><a href="courses-admin.html">Courses</a></li>
+      <!-- <li><a href="course-admin.html">Course page</a></li> -->
       <li><a href="profile-admin.html">Profile</a></li>
       <li><a href="instructor.html">Instructor page</a></li>
       <li><a href="instructors.html">Instructors</a></li>
