--- a/src/instructor.html
+++ b/src/instructor.html
@@ -63,7 +63,7 @@
               <li class="profile-view__stat-item"><span class="profile-view__stat-num">18</span> tests</li>
               <li class="profile-view__stat-item"><span class="profile-view__stat-num">25</span> forum posts</li>
             </ul>
-            <a href="#" class="btn btn--bordered">edit</a>
+            <a href="#" class="btn btn--edit">edit</a>
           </div>
         </div>
       </div>
