--- a/src/profile-edit.html
+++ b/src/profile-edit.html
@@ -52,7 +52,7 @@
       <form action="/echo" method="POST">
         <div class="profile-edit__head">
           <h1 class="profile-edit__title h1">Max Johnston</h1>
-          <button class="profile-edit__btn-top btn btn--submit btn--pull-right">Save</button>
+          <button class="profile-edit__btn-top btn btn--submit btn--save">Save</button>
         </div>
         <div class="profile-edit__info">
           <div class="profile-edit__col profile-edit__col-1">
@@ -124,7 +124,7 @@
             </div>
           </div>
           <a href="#" class="profile-edit__show-more">Some more fields</a>
-          <button class="profile-edit__btn-bottom btn btn--submit btn--edit">Save</button>
+          <button class="profile-edit__btn-bottom btn btn--submit btn--save">Save</button>
         </div>
       </form>
 
@@ -141,7 +141,7 @@
           <div class="profile-edit__form-row profile-edit__form-row--pass">
             <p class="status-text status-text--pass-danger">Passwords don't match!</p>
             <p class="status-text status-text--pass-success">Passwords match!</p>
-            <button class="btn btn--submit btn--edit">Change password</button>
+            <button class="btn btn--submit btn--save">Change password</button>
           </div>
         </form>
       </div>
