--- a/src/profile.html
+++ b/src/profile.html
@@ -50,7 +50,7 @@
               <div class="progress__text">16 of 20 courses passed</div>
             </div>
           </div>
-          <p class="profile-view__info">Additional information, if needed <a href="#" class="btn btn--bordered pull-right">Edit</a></p>
+          <p class="profile-view__info">Additional information, if needed <a href="#" class="btn btn--edit pull-right">Edit</a></p>
         </div>
         <div class="col-md-5 col-sm-12 col-xs-12 pull-right">
           <h2 class="profile-view__title">Statistics</h2>
